<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FlowStatisticsActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="流量统计"
        android:textColor="#000"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_network_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/network_type"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_network_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/all"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/color_1e1e1e" />

                <LinearLayout
                    android:id="@+id/ll_date_seleted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date_selection"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_date_seleted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/today"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/color_1e1e1e" />


                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/GB"
                    android:textColor="@color/color_000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/used_flow"
                    android:textColor="@color/color_1e1e1e" />

                <!--全部流量-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_down"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/GB"
                        android:textColor="@color/color_000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_upload"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/GB"
                        android:textColor="@color/color_000"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/download_traffic"
                        android:textColor="@color/color_1e1e1e"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/upload_traffic"
                        android:textColor="@color/color_1e1e1e"
                        android:textSize="14sp" />


                </LinearLayout>

                <!--流量排行-->
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/ll_traffic_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/application_traffic_ranking"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/color_1e1e1e" />

                <LinearLayout
                    android:id="@+id/ll_flow_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/flow_details"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_flow_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/this_month"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/ic_launcher" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/color_1e1e1e" />


                <!--移动  WiFi-->
                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_data_flow"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/data_flow"
                        android:textColor="@drawable/radiobutton_background"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rb_wifi_traffic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/wifi_traffic"
                        android:textColor="@drawable/radiobutton_background"
                        android:textSize="16sp" />


                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/total_flow" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/upload_traffic" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/download_traffic" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_marginTop="3dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/test" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="开始" />

                <TextView
                    android:id="@+id/tv_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_end"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="48dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_start">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="结束" />

                <TextView
                    android:id="@+id/tv_end"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="48dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_end">

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="使用" />

                <TextView
                    android:id="@+id/tv_usage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_pkg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:hint="Input package name"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btn_commit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="96dp"
                android:text="开始"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>